Deleted things and added prefab

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -198,6 +198,7 @@
     <ClInclude Include="CheckPoints_Manager.h" />
     <ClInclude Include="FadeImages.h" />
     <ClInclude Include="Ghoul.h" />
+    <ClInclude Include="MeleeLeshen.h" />
     <ClInclude Include="MiniGame_Revive.h" />
     <ClInclude Include="MoveImages.h" />
     <ClInclude Include="MusicController.h" />
@@ -281,7 +282,7 @@
     <ClCompile Include="CheckPoint.cpp" />
     <ClCompile Include="CheckPoints_Manager.cpp" />
     <ClCompile Include="FadeImages.cpp" />
-    <ClCompile Include="Ghoul.cpp" />AD
+    <ClCompile Include="Ghoul.cpp" />
     <ClCompile Include="MeleeLeshen.cpp" />
     <ClCompile Include="MiniGame_Revive.cpp" />
     <ClCompile Include="MoveImages.cpp" />
