--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -214,16 +214,10 @@
     <ClCompile Include="Ghoul.cpp">
       <Filter>Scripts\Enemies\Ghoul</Filter>
     </ClCompile>
-    <ClCompile Include="CloudLeshen.cpp">
-      <Filter>Scripts\Enemies\Leshen</Filter>
-    </ClCompile>
     <ClCompile Include="CrowsLeshen.cpp">
       <Filter>Scripts\Enemies\Leshen</Filter>
     </ClCompile>
     <ClCompile Include="Leshen.cpp">
-      <Filter>Scripts\Enemies\Leshen</Filter>
-    </ClCompile>
-    <ClCompile Include="MeleeLeshen.cpp">
       <Filter>Scripts\Enemies\Leshen</Filter>
     </ClCompile>
     <ClCompile Include="RootLeshen.cpp">
@@ -267,6 +261,9 @@
     </ClCompile>
     <ClCompile Include="ParticleRelease.cpp">
       <Filter>Scripts\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="MeleeLeshen.cpp">
+      <Filter>Scripts\Enemies\Leshen</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -495,9 +492,6 @@
     <ClInclude Include="Ghoul.h">
       <Filter>Scripts\Enemies\Ghoul</Filter>
     </ClInclude>
-    <ClInclude Include="CloudLeshen.h">
-      <Filter>Scripts\Enemies\Leshen</Filter>
-    </ClInclude>
     <ClInclude Include="CrowsLeshen.h">
       <Filter>Scripts\Enemies\Leshen</Filter>
     </ClInclude>
@@ -545,6 +539,9 @@
     </ClInclude>
     <ClInclude Include="ParticleRelease.h">
       <Filter>Scripts\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="MeleeLeshen.h">
+      <Filter>Scripts\Enemies\Leshen</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
