rockthrow ended, need polish (collisions)

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -237,6 +237,7 @@
     <ClInclude Include="Macros\AlienScripts.h" />
     <ClInclude Include="RockDownHill.h" />
     <ClInclude Include="RockFall.h" />
+    <ClInclude Include="RockThrow.h" />
     <ClInclude Include="RootLeshen.h" />
     <ClInclude Include="RockSpawner.h" />
     <ClInclude Include="Scale_Win.h" />
@@ -286,7 +287,6 @@
     <ClCompile Include="CheckPoints_Manager.cpp" />
     <ClCompile Include="FadeImages.cpp" />
     <ClCompile Include="Ghoul.cpp" />
-    <ClCompile Include="MeleeLeshen.cpp" />
     <ClCompile Include="MiniGame_Revive.cpp" />
     <ClCompile Include="MoveImages.cpp" />
     <ClCompile Include="MusicController.cpp" />
@@ -323,6 +323,7 @@
     <ClCompile Include="Macros\dllmain.cpp" />
     <ClCompile Include="RockDownHill.cpp" />
     <ClCompile Include="RockFall.cpp" />
+    <ClCompile Include="RockThrow.cpp" />
     <ClCompile Include="RootLeshen.cpp" />
     <ClCompile Include="RockSpawner.cpp" />
     <ClCompile Include="Scale_Win.cpp" />
