--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -262,6 +262,9 @@
     <ClCompile Include="ParticleRelease.cpp">
       <Filter>Scripts\Managers</Filter>
     </ClCompile>
+    <ClCompile Include="RockThrow.cpp">
+      <Filter>Scripts\Enemies</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -536,6 +539,9 @@
     </ClInclude>
     <ClInclude Include="ParticleRelease.h">
       <Filter>Scripts\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="RockThrow.h">
+      <Filter>Scripts\Enemies</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
