--- a/The Witcher/CoreData/Configuration/PhysicsSettings.json
+++ b/The Witcher/CoreData/Configuration/PhysicsSettings.json
@@ -14,9 +14,6 @@
         },
         {
             "Layer": "Enemy"
-        },
-        {
-            "Layer": "Dash"
         }
     ],
     "Default": {
@@ -24,47 +21,34 @@
         "Wall": true,
         "Ground": true,
         "Player": true,
-        "Enemy": true,
-        "Dash": true
+        "Enemy": true
     },
     "Wall": {
         "Default": true,
         "Wall": true,
         "Ground": true,
         "Player": true,
-        "Enemy": true,
-        "Dash": false
+        "Enemy": true
     },
     "Ground": {
         "Default": true,
         "Wall": true,
         "Ground": true,
         "Player": true,
-        "Enemy": true,
-        "Dash": false
+        "Enemy": true
     },
     "Player": {
         "Default": true,
         "Wall": true,
         "Ground": true,
         "Player": true,
-        "Enemy": true,
-        "Dash": false
+        "Enemy": true
     },
     "Enemy": {
         "Default": true,
         "Wall": true,
         "Ground": true,
         "Player": true,
-        "Enemy": true,
-        "Dash": true
-    },
-    "Dash": {
-        "Default": true,
-        "Wall": false,
-        "Ground": false,
-        "Player": false,
-        "Enemy": true,
-        "Dash": false
+        "Enemy": true
     }
 }
