Added spawner and finished ghoul particles

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -241,6 +241,8 @@
     <ClInclude Include="Scale_Win.h" />
     <ClInclude Include="Scores_Data.h" />
     <ClInclude Include="EffectArea.h" />
+    <ClInclude Include="SpawnEnemy.h" />
+    <ClInclude Include="SpawnEnemyManager.h" />
     <ClInclude Include="Spawner.h" />
     <ClInclude Include="RumblerManager.h" />
     <ClInclude Include="Stat.h" />
@@ -324,6 +326,8 @@
     <ClCompile Include="RockSpawner.cpp" />
     <ClCompile Include="Scale_Win.cpp" />
     <ClCompile Include="EffectArea.cpp" />
+    <ClCompile Include="SpawnEnemy.cpp" />
+    <ClCompile Include="SpawnEnemyManager.cpp" />
     <ClCompile Include="Spawner.cpp" />
     <ClCompile Include="RumblerManager.cpp" />
     <ClCompile Include="Stat.cpp" />
