--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -265,6 +265,12 @@
     <ClCompile Include="MeleeLeshen.cpp">
       <Filter>Scripts\Enemies\Leshen</Filter>
     </ClCompile>
+    <ClCompile Include="SpawnEnemy.cpp">
+      <Filter>Scripts\Enemies\Spawn</Filter>
+    </ClCompile>
+    <ClCompile Include="SpawnEnemyManager.cpp">
+      <Filter>Scripts\Enemies\Spawn</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -543,6 +549,12 @@
     <ClInclude Include="MeleeLeshen.h">
       <Filter>Scripts\Enemies\Leshen</Filter>
     </ClInclude>
+    <ClInclude Include="SpawnEnemyManager.h">
+      <Filter>Scripts\Enemies\Spawn</Filter>
+    </ClInclude>
+    <ClInclude Include="SpawnEnemy.h">
+      <Filter>Scripts\Enemies\Spawn</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
@@ -604,6 +616,9 @@
     </Filter>
     <Filter Include="Scripts\Managers">
       <UniqueIdentifier>{d5371a3f-65cb-4e5b-bf3b-3d907bc5e04d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Enemies\Spawn">
+      <UniqueIdentifier>{67ed245d-1957-4878-9f61-2616032f4c6f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
