Credits Menu created and loop with Main_Menu working

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -185,6 +185,7 @@
     <ClInclude Include="CameraShake.h" />
     <ClInclude Include="CameraUltiMode.h" />
     <ClInclude Include="CloudLeshen.h" />
+    <ClInclude Include="Credits.h" />
     <ClInclude Include="CrowsLeshen.h" />
     <ClInclude Include="DashCollider.h" />
     <ClInclude Include="Dummie.h" />
@@ -269,6 +270,7 @@
     <ClCompile Include="CameraShake.cpp" />
     <ClCompile Include="CameraUltiMode.cpp" />
     <ClCompile Include="CloudLeshen.cpp" />
+    <ClCompile Include="Credits.cpp" />
     <ClCompile Include="CrowsLeshen.cpp" />
     <ClCompile Include="DashCollider.cpp" />
     <ClCompile Include="Dummie.cpp" />
