--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -250,6 +250,9 @@
     <ClCompile Include="ParticleRelease.cpp">
       <Filter>Scripts\Managers</Filter>
     </ClCompile>
+    <ClCompile Include="Credits.cpp">
+      <Filter>Scripts\UI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -509,6 +512,9 @@
     </ClInclude>
     <ClInclude Include="ParticleRelease.h">
       <Filter>Scripts\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="Credits.h">
+      <Filter>Scripts\UI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
