--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="Ciri.h" />
     <ClInclude Include="CrowsLeshen.h" />
     <ClInclude Include="DashCollider.h" />
+    <ClInclude Include="DrownedGrab.h" />
     <ClInclude Include="Dummie.h" />
     <ClInclude Include="EffectsFactory.h" />
     <ClInclude Include="Drowned.h" />
@@ -274,6 +275,7 @@
     <ClCompile Include="Ciri.cpp" />
     <ClCompile Include="CrowsLeshen.cpp" />
     <ClCompile Include="DashCollider.cpp" />
+    <ClCompile Include="DrownedGrab.cpp" />
     <ClCompile Include="Dummie.cpp" />
     <ClCompile Include="EffectsFactory.cpp" />
     <ClCompile Include="Drowned.cpp" />
