--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -271,6 +271,9 @@
     <ClCompile Include="SpawnEnemyManager.cpp">
       <Filter>Scripts\Enemies\Spawn</Filter>
     </ClCompile>
+    <ClCompile Include="DrownedGrab.cpp">
+      <Filter>Scripts\Enemies\Drowned</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -554,6 +557,9 @@
     </ClInclude>
     <ClInclude Include="SpawnEnemy.h">
       <Filter>Scripts\Enemies\Spawn</Filter>
+    </ClInclude>
+    <ClInclude Include="DrownedGrab.h">
+      <Filter>Scripts\Enemies\Drowned</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
