solving not showing mesh (Component deformable mesh)

--- a/The Witcher/Alien Engine/Alien Engine.vcxproj.filters
+++ b/The Witcher/Alien Engine/Alien Engine.vcxproj.filters
@@ -633,9 +633,6 @@
     <ClInclude Include="ComponentLightDirectional.h">
       <Filter>Components\Lights</Filter>
     </ClInclude>
-    <ClInclude Include="ComponentMaterial.h">
-      <Filter>Components\Lights</Filter>
-    </ClInclude>
     <ClInclude Include="ComponentParticleSystem.h">
       <Filter>Components\ParticleSystem</Filter>
     </ClInclude>
@@ -679,6 +676,9 @@
       <Filter>Components\Physics</Filter>
     </ClInclude>
     <ClInclude Include="ComponentCurve.h">
+      <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="ComponentMaterial.h">
       <Filter>Components</Filter>
     </ClInclude>
   </ItemGroup>
