--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -254,6 +254,7 @@
     <ClInclude Include="TriggerCamera.h" />
     <ClInclude Include="TriggerEnvironment.h" />
     <ClInclude Include="TriggerFootsteps.h" />
+    <ClInclude Include="VagoneteDirection.h" />
     <ClInclude Include="VagoneteMove.h" />
   </ItemGroup>
   <ItemGroup>
@@ -335,6 +336,7 @@
     <ClCompile Include="TriggerCamera.cpp" />
     <ClCompile Include="TriggerEnvironment.cpp" />
     <ClCompile Include="TriggerFootsteps.cpp" />
+    <ClCompile Include="VagoneteDirection.cpp" />
     <ClCompile Include="VagoneteMove.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
