--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -244,6 +244,9 @@
     <ClCompile Include="VagoneteMove.cpp">
       <Filter>Scripts\Vagoneta</Filter>
     </ClCompile>
+    <ClCompile Include="VagoneteDirection.cpp">
+      <Filter>Scripts\Vagoneta</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -496,6 +499,9 @@
       <Filter>Scripts\Objects</Filter>
     </ClInclude>
     <ClInclude Include="VagoneteMove.h">
+      <Filter>Scripts\Vagoneta</Filter>
+    </ClInclude>
+    <ClInclude Include="VagoneteDirection.h">
       <Filter>Scripts\Vagoneta</Filter>
     </ClInclude>
   </ItemGroup>
