cover decreas life

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -247,6 +247,9 @@
     <ClCompile Include="VagoneteDirection.cpp">
       <Filter>Scripts\Vagoneta</Filter>
     </ClCompile>
+    <ClCompile Include="VagoneteCover.cpp">
+      <Filter>Scripts\Vagoneta</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -502,6 +505,9 @@
       <Filter>Scripts\Vagoneta</Filter>
     </ClInclude>
     <ClInclude Include="VagoneteDirection.h">
+      <Filter>Scripts\Vagoneta</Filter>
+    </ClInclude>
+    <ClInclude Include="VagoneteCover.h">
       <Filter>Scripts\Vagoneta</Filter>
     </ClInclude>
   </ItemGroup>
