--- a/The Witcher/Alien Engine/Alien Engine.vcxproj
+++ b/The Witcher/Alien Engine/Alien Engine.vcxproj
@@ -362,6 +362,7 @@
     <ClInclude Include="ComponentLightSpot.h" />
     <ClInclude Include="ComponentMaterial.h" />
     <ClInclude Include="ComponentMesh.h" />
+    <ClInclude Include="ComponentMeshCollider.h" />
     <ClInclude Include="ComponentPhysics.h" />
     <ClInclude Include="ComponentPointConstraint.h" />
     <ClInclude Include="ComponentParticleSystem.h" />
@@ -599,6 +600,7 @@
     <ClCompile Include="ComponentLightSpot.cpp" />
     <ClCompile Include="ComponentMaterial.cpp" />
     <ClCompile Include="ComponentMesh.cpp" />
+    <ClCompile Include="ComponentMeshCollider.cpp" />
     <ClCompile Include="ComponentPhysics.cpp" />
     <ClCompile Include="ComponentPointConstraint.cpp" />
     <ClCompile Include="ComponentParticleSystem.cpp" />
