--- a/The Witcher/Alien Engine/Alien Engine.vcxproj.filters
+++ b/The Witcher/Alien Engine/Alien Engine.vcxproj.filters
@@ -633,6 +633,9 @@
     <ClInclude Include="ComponentLightDirectional.h">
       <Filter>Components\Lights</Filter>
     </ClInclude>
+    <ClInclude Include="ComponentMaterial.h">
+      <Filter>Components\Lights</Filter>
+    </ClInclude>
     <ClInclude Include="ComponentParticleSystem.h">
       <Filter>Components\ParticleSystem</Filter>
     </ClInclude>
@@ -678,8 +681,8 @@
     <ClInclude Include="ComponentCurve.h">
       <Filter>Components</Filter>
     </ClInclude>
-    <ClInclude Include="ComponentMaterial.h">
-      <Filter>Components</Filter>
+    <ClInclude Include="ComponentMeshCollider.h">
+      <Filter>Components\Physics\Colliders</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -1621,6 +1624,9 @@
     </ClCompile>
     <ClCompile Include="ComponentCurve.cpp">
       <Filter>Components</Filter>
+    </ClCompile>
+    <ClCompile Include="ComponentMeshCollider.cpp">
+      <Filter>Components\Physics\Colliders</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
