--- a/The Witcher/CoreData/Configuration/PhysicsSettings.json
+++ b/The Witcher/CoreData/Configuration/PhysicsSettings.json
@@ -14,6 +14,9 @@
         },
         {
             "Layer": "Enemy"
+        },
+        {
+            "Layer": "Drowner"
         }
     ],
     "Default": {
@@ -21,34 +24,47 @@
         "Wall": true,
         "Ground": true,
         "Player": true,
-        "Enemy": true
+        "Enemy": true,
+        "Drowner": true
     },
     "Wall": {
         "Default": true,
         "Wall": true,
         "Ground": true,
         "Player": true,
-        "Enemy": true
+        "Enemy": true,
+        "Drowner": true
     },
     "Ground": {
         "Default": true,
         "Wall": true,
         "Ground": true,
         "Player": true,
-        "Enemy": true
+        "Enemy": true,
+        "Drowner": false
     },
     "Player": {
         "Default": true,
         "Wall": true,
         "Ground": true,
         "Player": true,
-        "Enemy": true
+        "Enemy": true,
+        "Drowner": true
     },
     "Enemy": {
         "Default": true,
         "Wall": true,
         "Ground": true,
         "Player": true,
-        "Enemy": true
+        "Enemy": true,
+        "Drowner": true
+    },
+    "Drowner": {
+        "Default": true,
+        "Wall": true,
+        "Ground": false,
+        "Player": true,
+        "Enemy": true,
+        "Drowner": true
     }
 }
