--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -270,6 +270,7 @@
     <ClInclude Include="VagoneteCover.h" />
     <ClInclude Include="VagoneteDirection.h" />
     <ClInclude Include="VagoneteMove.h" />
+    <ClInclude Include="VagoneteObstacle.h" />
     <ClInclude Include="Wagonnete_UI.h" />
   </ItemGroup>
   <ItemGroup>
@@ -366,6 +367,7 @@
     <ClCompile Include="VagoneteCover.cpp" />
     <ClCompile Include="VagoneteDirection.cpp" />
     <ClCompile Include="VagoneteMove.cpp" />
+    <ClCompile Include="VagoneteObstacle.cpp" />
     <ClCompile Include="Wagonnete_UI.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
