--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -304,6 +304,9 @@
     <ClCompile Include="Wagonnete_UI.cpp">
       <Filter>Scripts\UI\HUD</Filter>
     </ClCompile>
+    <ClCompile Include="VagoneteObstacle.cpp">
+      <Filter>Scripts\Vagoneta</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -581,7 +584,7 @@
     </ClInclude>
     <ClInclude Include="VagoneteCover.h">
       <Filter>Scripts\Vagoneta</Filter>
-      </ClInclude>
+    </ClInclude>
     <ClInclude Include="GameManager.h">
       <Filter>Scripts\Managers</Filter>
     </ClInclude>
@@ -620,6 +623,9 @@
     </ClInclude>
     <ClInclude Include="Wagonnete_UI.h">
       <Filter>Scripts\UI\HUD</Filter>
+    </ClInclude>
+    <ClInclude Include="VagoneteObstacle.h">
+      <Filter>Scripts\Vagoneta</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -682,7 +688,7 @@
     </Filter>
     <Filter Include="Scripts\Vagoneta">
       <UniqueIdentifier>{dcb11fd0-25c8-4f14-ab15-3150225c0a5c}</UniqueIdentifier>
-       </Filter>
+    </Filter>
     <Filter Include="Scripts\Managers">
       <UniqueIdentifier>{d5371a3f-65cb-4e5b-bf3b-3d907bc5e04d}</UniqueIdentifier>
     </Filter>
