Enemy groups: strength by number and enclosing sphere radius (Descr)
- Is it the minimal sphere possible?
- TODO: alter enemy stats according to the group strength value

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -307,6 +307,9 @@
     <ClCompile Include="VagoneteObstacle.cpp">
       <Filter>Scripts\Vagoneta</Filter>
     </ClCompile>
+    <ClCompile Include="EnemyGroupLogic.cpp">
+      <Filter>Scripts\Enemies</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -627,6 +630,9 @@
     <ClInclude Include="VagoneteObstacle.h">
       <Filter>Scripts\Vagoneta</Filter>
     </ClInclude>
+    <ClInclude Include="EnemyGroupLogic.h">
+      <Filter>Scripts\Enemies</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
@@ -697,6 +703,9 @@
     </Filter>
     <Filter Include="Scripts\UI\Another Menus">
       <UniqueIdentifier>{6173e0cd-bf1f-4f7d-a29e-5ad7f550f311}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Enemies\Group">
+      <UniqueIdentifier>{fc469a0a-352c-43bd-b873-cc094cd829e4}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
