--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -196,6 +196,7 @@
     <ClInclude Include="EffectsFactory.h" />
     <ClInclude Include="Drowned.h" />
     <ClInclude Include="DrownedRange.h" />
+    <ClInclude Include="EnemyGroupLogic.h" />
     <ClInclude Include="GhoulDodge.h" />
     <ClInclude Include="GhoulOriginal.h" />
     <ClInclude Include="Leshen.h" />
@@ -295,6 +296,7 @@
     <ClCompile Include="EffectsFactory.cpp" />
     <ClCompile Include="Drowned.cpp" />
     <ClCompile Include="DrownedRange.cpp" />
+    <ClCompile Include="EnemyGroupLogic.cpp" />
     <ClCompile Include="GhoulDodge.cpp" />
     <ClCompile Include="GhoulOriginal.cpp" />
     <ClCompile Include="Leshen.cpp" />
