Avoid Steering Behaviour

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -310,6 +310,9 @@
     <ClCompile Include="EnemyGroupLogic.cpp">
       <Filter>Scripts\Enemies</Filter>
     </ClCompile>
+    <ClCompile Include="SteeringAvoid.cpp">
+      <Filter>Scripts\Enemies</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -631,6 +634,9 @@
       <Filter>Scripts\Vagoneta</Filter>
     </ClInclude>
     <ClInclude Include="EnemyGroupLogic.h">
+      <Filter>Scripts\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="SteeringAvoid.h">
       <Filter>Scripts\Enemies</Filter>
     </ClInclude>
   </ItemGroup>
