Boss lifebar Logic

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -179,6 +179,7 @@
     <ClInclude Include="Boss.h" />
     <ClInclude Include="BlockerObstacle.h" />
     <ClInclude Include="Bonfire.h" />
+    <ClInclude Include="Boss_Lifebar.h" />
     <ClInclude Include="BreakableObject.h" />
     <ClInclude Include="CameraEnterExit.h" />
     <ClInclude Include="CameraLimits.h" />
@@ -279,6 +280,7 @@
     <ClCompile Include="Boss.cpp" />
     <ClCompile Include="BlockerObstacle.cpp" />
     <ClCompile Include="Bonfire.cpp" />
+    <ClCompile Include="Boss_Lifebar.cpp" />
     <ClCompile Include="BreakableObject.cpp" />
     <ClCompile Include="CameraEnterExit.cpp" />
     <ClCompile Include="CameraLimits.cpp" />
