--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -310,6 +310,9 @@
     <ClCompile Include="EnemyGroupLogic.cpp">
       <Filter>Scripts\Enemies</Filter>
     </ClCompile>
+    <ClCompile Include="Boss_Lifebar.cpp">
+      <Filter>Scripts\UI\HUD</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -632,6 +635,9 @@
     </ClInclude>
     <ClInclude Include="EnemyGroupLogic.h">
       <Filter>Scripts\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="Boss_Lifebar.h">
+      <Filter>Scripts\UI\HUD</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
