knockback direction on attack json

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -62,10 +62,10 @@
       <Filter>Scripts\Triggers</Filter>
     </ClCompile>
     <ClCompile Include="BreakableObject.cpp">
-      <Filter>Scripts\Objects</Filter>
+      <Filter>Scripts\Managers\Objects</Filter>
     </ClCompile>
     <ClCompile Include="ExplodeChildren.cpp">
-      <Filter>Scripts\Objects</Filter>
+      <Filter>Scripts\Managers\Objects</Filter>
     </ClCompile>
     <ClCompile Include="TriggerMusicInteractive.cpp">
       <Filter>Scripts\Triggers</Filter>
@@ -125,13 +125,13 @@
       <Filter>Scripts\Enemies</Filter>
     </ClCompile>
     <ClCompile Include="RockSpawner.cpp">
-      <Filter>Scripts\Objects</Filter>
+      <Filter>Scripts\Managers\Objects</Filter>
     </ClCompile>
     <ClCompile Include="RockDownHill.cpp">
-      <Filter>Scripts\Objects</Filter>
+      <Filter>Scripts\Managers\Objects</Filter>
     </ClCompile>
     <ClCompile Include="TriggerRocks.cpp">
-      <Filter>Scripts\Objects</Filter>
+      <Filter>Scripts\Managers\Objects</Filter>
     </ClCompile>
     <ClCompile Include="MusicController.cpp">
       <Filter>Scripts\Triggers</Filter>
@@ -224,10 +224,10 @@
       <Filter>Scripts\Enemies\Ghoul</Filter>
     </ClCompile>
     <ClCompile Include="Bonfire.cpp">
-      <Filter>Scripts\Objects</Filter>
+      <Filter>Scripts\Managers\Objects</Filter>
     </ClCompile>
     <ClCompile Include="BlockerObstacle.cpp">
-      <Filter>Scripts\Objects</Filter>
+      <Filter>Scripts\Managers\Objects</Filter>
     </ClCompile>
     <ClCompile Include="Floating.cpp">
       <Filter>Scripts</Filter>
@@ -254,7 +254,7 @@
       <Filter>Scripts\Enemies\Ghoul</Filter>
     </ClCompile>
     <ClCompile Include="Dummie.cpp">
-      <Filter>Scripts\Objects</Filter>
+      <Filter>Scripts\Managers\Objects</Filter>
     </ClCompile>
     <ClCompile Include="VagoneteMove.cpp">
       <Filter>Scripts\Vagoneta</Filter>
@@ -379,10 +379,10 @@
       <Filter>Scripts\Triggers</Filter>
     </ClInclude>
     <ClInclude Include="BreakableObject.h">
-      <Filter>Scripts\Objects</Filter>
+      <Filter>Scripts\Managers\Objects</Filter>
     </ClInclude>
     <ClInclude Include="ExplodeChildren.h">
-      <Filter>Scripts\Objects</Filter>
+      <Filter>Scripts\Managers\Objects</Filter>
     </ClInclude>
     <ClInclude Include="TriggerMusicInteractive.h">
       <Filter>Scripts\Triggers</Filter>
@@ -445,13 +445,13 @@
       <Filter>Scripts\Enemies</Filter>
     </ClInclude>
     <ClInclude Include="RockSpawner.h">
-      <Filter>Scripts\Objects</Filter>
+      <Filter>Scripts\Managers\Objects</Filter>
     </ClInclude>
     <ClInclude Include="RockDownHill.h">
-      <Filter>Scripts\Objects</Filter>
+      <Filter>Scripts\Managers\Objects</Filter>
     </ClInclude>
     <ClInclude Include="TriggerRocks.h">
-      <Filter>Scripts\Objects</Filter>
+      <Filter>Scripts\Managers\Objects</Filter>
     </ClInclude>
     <ClInclude Include="MusicController.h">
       <Filter>Scripts\Triggers</Filter>
@@ -547,10 +547,10 @@
       <Filter>Scripts\Enemies\Ghoul</Filter>
     </ClInclude>
     <ClInclude Include="Bonfire.h">
-      <Filter>Scripts\Objects</Filter>
+      <Filter>Scripts\Managers\Objects</Filter>
     </ClInclude>
     <ClInclude Include="BlockerObstacle.h">
-      <Filter>Scripts\Objects</Filter>
+      <Filter>Scripts\Managers\Objects</Filter>
     </ClInclude>
     <ClInclude Include="Floating.h">
       <Filter>Scripts</Filter>
@@ -577,7 +577,7 @@
       <Filter>Scripts\Enemies\Ghoul</Filter>
     </ClInclude>
     <ClInclude Include="Dummie.h">
-      <Filter>Scripts\Objects</Filter>
+      <Filter>Scripts\Managers\Objects</Filter>
     </ClInclude>
     <ClInclude Include="VagoneteMove.h">
       <Filter>Scripts\Vagoneta</Filter>
@@ -659,9 +659,6 @@
     <Filter Include="Scripts\Triggers">
       <UniqueIdentifier>{4b461c48-f228-448b-bd9b-d17cc95854aa}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Scripts\Objects">
-      <UniqueIdentifier>{c5fbad49-d2c4-4e75-89d0-8646dfde0057}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Scripts\Debug">
       <UniqueIdentifier>{2439b081-3d52-4572-8338-780c4f33dd4e}</UniqueIdentifier>
     </Filter>
@@ -706,6 +703,9 @@
     </Filter>
     <Filter Include="Scripts\Enemies\Group">
       <UniqueIdentifier>{fc469a0a-352c-43bd-b873-cc094cd829e4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Managers\Objects">
+      <UniqueIdentifier>{c5fbad49-d2c4-4e75-89d0-8646dfde0057}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
