--- a/The Witcher/CoreData/Configuration/PhysicsSettings.json
+++ b/The Witcher/CoreData/Configuration/PhysicsSettings.json
@@ -56,7 +56,7 @@
         "Player": true,
         "Enemy": true,
         "Drowner": true,
-        "Dashcoll": false
+        "Dashcoll": true
     },
     "Enemy": {
         "Default": true,
@@ -80,7 +80,7 @@
         "Default": true,
         "Wall": false,
         "Ground": false,
-        "Player": false,
+        "Player": true,
         "Enemy": true,
         "Drowner": true,
         "Dashcoll": false
