--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="Ciri.h" />
     <ClInclude Include="CiriFightController.h" />
     <ClInclude Include="CiriOriginal.h" />
+    <ClInclude Include="CloudLeshen.h" />
     <ClInclude Include="Credits.h" />
     <ClInclude Include="CrowsLeshen.h" />
     <ClInclude Include="DashCollider.h" />
@@ -288,6 +289,7 @@
     <ClCompile Include="Ciri.cpp" />
     <ClCompile Include="CiriFightController.cpp" />
     <ClCompile Include="CiriOriginal.cpp" />
+    <ClCompile Include="CloudLeshen.cpp" />
     <ClCompile Include="Credits.cpp" />
     <ClCompile Include="CrowsLeshen.cpp" />
     <ClCompile Include="DashCollider.cpp" />
