weapon collider type and fixes to knockup

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -176,6 +176,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ArrowScript.h" />
+    <ClInclude Include="AttackTrigger.h" />
     <ClInclude Include="Boss.h" />
     <ClInclude Include="BlockerObstacle.h" />
     <ClInclude Include="Bonfire.h" />
@@ -276,6 +277,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ArrowScript.cpp" />
+    <ClCompile Include="AttackTrigger.cpp" />
     <ClCompile Include="Boss.cpp" />
     <ClCompile Include="BlockerObstacle.cpp" />
     <ClCompile Include="Bonfire.cpp" />
