--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -262,6 +262,9 @@
     <ClInclude Include="TriggerMusicInteractive.h" />
     <ClInclude Include="TriggerRocks.h" />
     <ClInclude Include="Trigger_Win.h" />
+    <ClInclude Include="Tutorial_HUD.h" />
+    <ClInclude Include="Tutorial_HUD_Triggers.h" />
+    <ClInclude Include="Tutorial_Intro.h" />
     <ClInclude Include="UI_Char_Frame.h" />
     <ClInclude Include="UI_EndMenu.h" />
     <ClInclude Include="UI_Ultibar_Particle.h" />
@@ -362,6 +365,9 @@
     <ClCompile Include="TriggerMusicInteractive.cpp" />
     <ClCompile Include="TriggerRocks.cpp" />
     <ClCompile Include="Trigger_Win.cpp" />
+    <ClCompile Include="Tutorial_HUD.cpp" />
+    <ClCompile Include="Tutorial_HUD_Triggers.cpp" />
+    <ClCompile Include="Tutorial_Intro.cpp" />
     <ClCompile Include="UI_Char_Frame.cpp" />
     <ClCompile Include="UI_EndMenu.cpp" />
     <ClCompile Include="UI_Ultibar_Particle.cpp" />
