--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -314,7 +314,17 @@
       <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="Boss_Lifebar.cpp">
-      <Filter>Scripts\UI\HUD</Filter>    </ClCompile>
+      <Filter>Scripts\UI\HUD</Filter>
+    </ClCompile>
+    <ClCompile Include="Tutorial_Intro.cpp">
+      <Filter>Scripts\Tutorial</Filter>
+    </ClCompile>
+    <ClCompile Include="Tutorial_HUD_Triggers.cpp">
+      <Filter>Scripts\Tutorial</Filter>
+    </ClCompile>
+    <ClCompile Include="Tutorial_HUD.cpp">
+      <Filter>Scripts\Tutorial</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -644,6 +654,15 @@
     <ClInclude Include="Boss_Lifebar.h">
       <Filter>Scripts\UI\HUD</Filter>
     </ClInclude>
+    <ClInclude Include="Tutorial_Intro.h">
+      <Filter>Scripts\Tutorial</Filter>
+    </ClInclude>
+    <ClInclude Include="Tutorial_HUD_Triggers.h">
+      <Filter>Scripts\Tutorial</Filter>
+    </ClInclude>
+    <ClInclude Include="Tutorial_HUD.h">
+      <Filter>Scripts\Tutorial</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
@@ -717,6 +736,9 @@
     </Filter>
     <Filter Include="Scripts\Managers\Objects">
       <UniqueIdentifier>{c5fbad49-d2c4-4e75-89d0-8646dfde0057}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Tutorial">
+      <UniqueIdentifier>{39f33538-cb11-460d-ad6d-3583d805584e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
