--- a/The Witcher/CoreData/Configuration/PhysicsSettings.json
+++ b/The Witcher/CoreData/Configuration/PhysicsSettings.json
@@ -38,7 +38,7 @@
         "Player": true,
         "Enemy": true,
         "Drowner": true,
-        "Dashcoll": false
+        "Dashcoll": true
     },
     "Ground": {
         "Default": true,
@@ -46,8 +46,8 @@
         "Ground": true,
         "Player": true,
         "Enemy": true,
-        "Drowner": false,
-        "Dashcoll": false
+        "Drowner": true,
+        "Dashcoll": true
     },
     "Player": {
         "Default": true,
@@ -56,7 +56,7 @@
         "Player": true,
         "Enemy": true,
         "Drowner": true,
-        "Dashcoll": false
+        "Dashcoll": true
     },
     "Enemy": {
         "Default": true,
@@ -70,7 +70,7 @@
     "Drowner": {
         "Default": true,
         "Wall": true,
-        "Ground": false,
+        "Ground": true,
         "Player": true,
         "Enemy": true,
         "Drowner": true,
@@ -78,11 +78,11 @@
     },
     "Dashcoll": {
         "Default": true,
-        "Wall": false,
-        "Ground": false,
-        "Player": false,
+        "Wall": true,
+        "Ground": true,
+        "Player": true,
         "Enemy": true,
         "Drowner": true,
-        "Dashcoll": false
+        "Dashcoll": true
     }
 }
