--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -258,6 +258,7 @@
     <ClInclude Include="State.h" />
     <ClInclude Include="Subtitle.h" />
     <ClInclude Include="TeleportLevel.h" />
+    <ClInclude Include="Training_Zone.h" />
     <ClInclude Include="TriggerFog.h" />
     <ClInclude Include="TriggerMusicInteractive.h" />
     <ClInclude Include="TriggerRocks.h" />
@@ -361,6 +362,7 @@
     <ClCompile Include="State.cpp" />
     <ClCompile Include="Subtitle.cpp" />
     <ClCompile Include="TeleportLevel.cpp" />
+    <ClCompile Include="Training_Zone.cpp" />
     <ClCompile Include="TriggerFog.cpp" />
     <ClCompile Include="TriggerMusicInteractive.cpp" />
     <ClCompile Include="TriggerRocks.cpp" />
