--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -208,6 +208,7 @@
     <ClInclude Include="Ghoul.h" />
     <ClInclude Include="MeleeLeshen.h" />
     <ClInclude Include="MiniGame_Revive.h" />
+    <ClInclude Include="MoveCameraArroundObject.h" />
     <ClInclude Include="MoveImages.h" />
     <ClInclude Include="MusicController.h" />
     <ClInclude Include="Head_Script.h" />
@@ -314,6 +315,7 @@
     <ClCompile Include="Ghoul.cpp" />
     <ClCompile Include="MeleeLeshen.cpp" />
     <ClCompile Include="MiniGame_Revive.cpp" />
+    <ClCompile Include="MoveCameraArroundObject.cpp" />
     <ClCompile Include="MoveImages.cpp" />
     <ClCompile Include="MusicController.cpp" />
     <ClCompile Include="Head_Script.cpp" />
