--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -328,6 +328,9 @@
     <ClCompile Include="Training_Zone.cpp">
       <Filter>Scripts\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="MoveCameraArroundObject.cpp">
+      <Filter>Scripts\Enemies</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -668,6 +671,9 @@
     </ClInclude>
     <ClInclude Include="Training_Zone.h">
       <Filter>Scripts\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="MoveCameraArroundObject.h">
+      <Filter>Scripts\Enemies</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
