Training Zone with acceleration and different options for directions

--- a/The Witcher/CoreData/Configuration/Layouts/Default.ini
+++ b/The Witcher/CoreData/Configuration/Layouts/Default.ini
@@ -79,8 +79,8 @@ Size=621,794
 Collapsed=0
 
 [Window][Configuration]
-Pos=1507,87
-Size=413,970
+Pos=1507,71
+Size=413,986
 Collapsed=0
 DockId=0x00000003,2
 
@@ -91,20 +91,20 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Render Options]
-Pos=1507,87
-Size=413,970
+Pos=1507,71
+Size=413,986
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Panel Hierarchy]
-Pos=0,87
-Size=277,688
+Pos=0,71
+Size=277,704
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Inspector]
-Pos=1507,87
-Size=413,970
+Pos=1507,71
+Size=413,986
 Collapsed=0
 DockId=0x00000003,0
 
@@ -119,8 +119,8 @@ Size=1920,1057
 Collapsed=0
 
 [Window][Scene]
-Pos=279,87
-Size=1226,688
+Pos=279,71
+Size=1226,704
 Collapsed=0
 DockId=0x00000009,0
 
@@ -140,8 +140,8 @@ Collapsed=0
 DockId=0x00000006,1
 
 [Window][Game]
-Pos=279,87
-Size=1226,688
+Pos=279,71
+Size=1226,704
 Collapsed=0
 DockId=0x00000009,2
 
@@ -153,7 +153,7 @@ DockId=0x0000000D,0
 
 [Window][## Tools]
 Pos=0,19
-Size=1920,66
+Size=1920,50
 Collapsed=0
 DockId=0x00000010,0
 
@@ -170,8 +170,8 @@ Collapsed=0
 DockId=0x00000006,2
 
 [Window][Animator]
-Pos=279,87
-Size=1226,688
+Pos=279,71
+Size=1226,704
 Collapsed=0
 DockId=0x00000009,1
 
@@ -187,20 +187,20 @@ Collapsed=0
 
 [Docking][Data]
 DockSpace                 ID=0x81802EEE Window=0xF3A9BAEC Pos=0,42 Size=1920,1038 Split=Y
-  DockNode                ID=0x00000010 Parent=0x81802EEE SizeRef=1600,52 HiddenTabBar=1 Selected=0x063B9A85
-  DockNode                ID=0x00000011 Parent=0x81802EEE SizeRef=1600,764 Split=Y
+  DockNode                ID=0x00000010 Parent=0x81802EEE SizeRef=1600,50 HiddenTabBar=1 Selected=0x063B9A85
+  DockNode                ID=0x00000011 Parent=0x81802EEE SizeRef=1600,986 Split=Y
     DockNode              ID=0x0000000D Parent=0x00000011 SizeRef=1200,45 HiddenTabBar=1 Selected=0x76AC6852
     DockNode              ID=0x0000000E Parent=0x00000011 SizeRef=1200,991 Split=X
       DockNode            ID=0x00000002 Parent=0x0000000E SizeRef=1505,631 Split=Y
-        DockNode          ID=0x00000005 Parent=0x00000002 SizeRef=1200,662 Split=X
+        DockNode          ID=0x00000005 Parent=0x00000002 SizeRef=1200,704 Split=X
           DockNode        ID=0x0000000B Parent=0x00000005 SizeRef=843,631 Split=X
             DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=836,631 Split=Y
               DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=547,414 Split=X Selected=0x876DFDF0
                 DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=277,631 Selected=0x876DFDF0
-                DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=1226,631 CentralNode=1 Selected=0x83199EB2
+                DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=1226,631 CentralNode=1 Selected=0x18B8C0DE
               DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=547,215 Selected=0x169CEE22
             DockNode      ID=0x0000000A Parent=0x0000000B SizeRef=362,631 Selected=0xF02CD328
           DockNode        ID=0x0000000C Parent=0x00000005 SizeRef=355,631 Selected=0xF02CD328
-        DockNode          ID=0x00000006 Parent=0x00000002 SizeRef=1200,269 Selected=0xF9BEF62A
+        DockNode          ID=0x00000006 Parent=0x00000002 SizeRef=1200,280 Selected=0xE00EE972
       DockNode            ID=0x00000003 Parent=0x0000000E SizeRef=413,631 Selected=0xF02CD328
 
