--- a/The Witcher/Alien Engine/Alien Engine.vcxproj
+++ b/The Witcher/Alien Engine/Alien Engine.vcxproj
@@ -357,6 +357,7 @@
     <ClInclude Include="ComponentCanvas.h" />
     <ClInclude Include="ComponentCheckbox.h" />
     <ClInclude Include="ComponentImage.h" />
+    <ClInclude Include="ComponentJoint.h" />
     <ClInclude Include="ComponentLightDirectional.h" />
     <ClInclude Include="ComponentLightPoint.h" />
     <ClInclude Include="ComponentLightSpot.h" />
@@ -364,7 +365,7 @@
     <ClInclude Include="ComponentMesh.h" />
     <ClInclude Include="ComponentMeshCollider.h" />
     <ClInclude Include="ComponentPhysics.h" />
-    <ClInclude Include="ComponentPointConstraint.h" />
+    <ClInclude Include="ComponentConfigurableJoint.h" />
     <ClInclude Include="ComponentParticleSystem.h" />
     <ClInclude Include="ComponentRigidBody.h" />
     <ClInclude Include="ComponentScript.h" />
@@ -595,6 +596,7 @@
     <ClCompile Include="ComponentCanvas.cpp" />
     <ClCompile Include="ComponentCheckbox.cpp" />
     <ClCompile Include="ComponentImage.cpp" />
+    <ClCompile Include="ComponentJoint.cpp" />
     <ClCompile Include="ComponentLightDirectional.cpp" />
     <ClCompile Include="ComponentLightPoint.cpp" />
     <ClCompile Include="ComponentLightSpot.cpp" />
@@ -602,7 +604,7 @@
     <ClCompile Include="ComponentMesh.cpp" />
     <ClCompile Include="ComponentMeshCollider.cpp" />
     <ClCompile Include="ComponentPhysics.cpp" />
-    <ClCompile Include="ComponentPointConstraint.cpp" />
+    <ClCompile Include="ComponentConfigurableJoint.cpp" />
     <ClCompile Include="ComponentParticleSystem.cpp" />
     <ClCompile Include="ComponentRigidBody.cpp" />
     <ClCompile Include="ComponentScript.cpp" />
